--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -275,19 +275,29 @@
         [/recall]
 
         [message]
+            speaker=Deoran
+            message= _ "It is so dark down here! It feels like the light from our torches is doing hardly anything at all."
+        [/message]
+
+        [message]
             speaker=Ethiliel
-            message= _ "Proceed slowly, who knows what evils the bandits have awoken here! We cannot be too careful."
+            message= _ "That would be the work of the undead. We must proceed slowly, for the evils that the bandits have awoken seem to be quite powerful. We elves are also far less adept in caves than we are in our forests. You will have to lead the way."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "Very well. We should all stay close and guard each others' backs. Something sinister lurks in this darkness."
         [/message]
 
 #ifdef EASY
         [message]
             speaker=narrator
-            message= _ "Cavalrymen and Dragoons will be less useful in the caves than soldiers who fight on foot."
+            message= _ "Cavalrymen and Dragoons will be less useful underground than soldiers who fight on foot."
             image=wesnoth-icon.png
         [/message]
         [message]
             speaker=narrator
-            message= _ "Also, soldiers with the <i>quick</i> trait will be useful in the dark."
+            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing cave terrains."
             image=wesnoth-icon.png
         [/message]
 #endif
@@ -344,12 +354,12 @@
 
         [message]
             speaker=Minister Hylas
-            message= _ "What horrid creature may that be? I’ve seen many wicked things in my life, but never one such as that."
+            message= _ "What manner of horrid creature is this? I have seen many wicked things in my life, but never one so perverse."
         [/message]
 
         [message]
             speaker=Ethiliel
-            message= _ "Whatever evil lurks below must have set it here as a guardian. We elves have heard stories of these creatures but I wouldn’t have expected to come across one here. Let us proceed with caution."
+            message= _ "Such creatures may be summoned by conjurers of sufficient skill, though I suspect that this is something other beast, twisted by the foul energy of this place. It must have been set here as a guardian."
         [/message]
     [/event]
 
@@ -365,19 +375,21 @@
         [/filter_second]
 
         [redraw][/redraw]
+
+        # bad grammar/different manner of speech here for the trolls
         [message]
             speaker=Grek
-            message= _ "Ha! Humans and elves! What are you doing in our caves, and why shouldn’t we grind your bones and gnaw on your flesh?"
+            message= _ "Ock! I sees some humans and elfsies! What are you doing in our caves?"
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "We mean no trespass. We are hunting the undead."
+            message= _ "We do not mean to trespass on your territory. We are hunting the undead and have no quarrel with you. Would you like to join us?"
         [/message]
 
         [message]
             speaker=Grek
-            message= _ "Undead! Ha! We kill undead all the time. You be friendly enough so we won’t kill you, but why should we help you?"
+            message= _ "Undead! Ha, them puny skeletons we smash all the time! You be friendly enough so we no attack you, but why we should help you?"
         [/message]
 
 #ifdef EASY
@@ -447,16 +459,17 @@
 
             [message]
                 speaker=Grek
-                message= _ "Gold is good. We can trade gold for weapons and fire. We will help you defeat the undead now."
+                message= _ "Gold is good. We trade gold for weapons and fire. We help you kill undead now."
             [/message]
             [message]
                 speaker=Deoran
-                message= _ "What aid can you offer us? We are not well suited to fighting in the caves."
+                message= _ "Excellent. Can you help guide us through these tunnels? We are not well suited to fighting in the caves."
             [/message]
             [message]
                 speaker=Grek
-                message= _ "We already planned to kill the undead ourselves... First we kill dwarves though! Now we have dwarvish thunder fire and many trolls ready for fighting. They come too and help you smash them undead."
+                message= _ "We lead you to bad lich. We kill dwarves before and take their thunder fire. Grek put by wall behind lich castle. We can use to attack lich directly. No worry about fight through lich minions."
             [/message]
+
             [lift_fog]
                 [filter_side]
                     side=1
@@ -469,7 +482,7 @@
             [message]
                 speaker=Grek
                 scroll=no
-                message= _ "Go here and light the thunder fire and it will blast a back door into the lich’s lair!"
+                message= _ "Go here and light thunder fire and it blast back door into lich lair!"
             [/message]
 
             {VARIABLE bomb_ready yes}
@@ -503,7 +516,7 @@
                         [else]
                             [message]
                                 speaker=Grek
-                                message= _ "Haha, you humans and elves poor, you have not enough gold! If you want troll help, you must come to me when you have the gold."
+                                message= _ "Haha, humans and elfsies poor, you no have much gold! If you want troll help, you come to me when you have gold."
                             [/message]
 
                             {VARIABLE late_payment_for_troll_help yes}
@@ -522,12 +535,12 @@
                 [command]
                     [message]
                         speaker=Grek
-                        message= _ "Ha! Who wants stupid human lands!"
+                        message= _ "Ha! Who want stupid human land!"
                     [/message]
                     [role]
                         role=disillusioned
                         side=1
-                        type="Mage of Light,White Mage," +
+                        type="Mage of Light,White Mage," +
                             "Elvish Sylph," +
                             "Master Bowman,Halberdier,Royal Guard,Cavalier," +
                             "Elvish Enchantress,Elvish Shyde,Elvish Champion,Elvish Marshal,Elvish Avenger," +
@@ -549,11 +562,15 @@
                     [message]
                         speaker=Grek
                         # wmllint: local spelling "Bah"
-                        message= _ "Bah! We destroy the undead when we want. Maybe wait for a few years first. If you want troll help, you come see me and give proper payment!"
+                        message= _ "We smash undead whenever we want! Puny skeleton break easy under troll fist. We no scare. If you want troll help, you come see me and give gold!"
                     [/message]
                     [message]
                         speaker=Ethiliel
-                        message= _ "These creatures are much too simpleminded to be of any help to us but at least they will not attack us outright. We will have to face this enemy alone."
+                        message= _ "<i>These creatures are much too simpleminded to be of any help to us. We should just proceed onward and be glad they are not attacking us as well.</i>"
+                    [/message]
+                    [message]
+                        speaker=Deoran
+                        message= _ "<i>I don't know, trolls are not as stupid as you might think. They might be of use if we can find the gold to pay them. But for now, we have to continue on alone.</i>"
                     [/message]
 
                     {VARIABLE late_payment_for_troll_help yes}
@@ -591,7 +608,7 @@
 
         [message]
             speaker=Grek
-            message= _ "Ha, you can afford troll help this time?"
+            message= _ "You can afford troll help now?"
             [option]
                 [show_if]
                     [variable]
@@ -695,74 +712,105 @@
         [redraw][/redraw]
         [message]
             speaker="Ethiliel"
-            message= _ "Mebrin! My teacher of old! Can that truly be you?"
+            message= _ "Mebrin! My old master! Is that truly you?"
         [/message]
 
         [message]
             speaker="Mal M'Brin"
             # wmllint: local spelling Eth
-            message = _ "Eth...Ethiliel? You are here?"
+            message = _ "Eth... Ethiliel?"
         [/message]
 
         [message]
             speaker="Ethiliel"
-            message= _ "How did you come to be here, you of all people, shut away from the trees and the light of the sun?"
+            message= _ "Oh, it truly is you! How did you come to be here, shut away from the trees and the light of the sun?"
         [/message]
 
         [message]
             speaker="Mal M'Brin"
-            message = _ "I broke their chains. They bound me, the accursed humans. Bound me! Kidnapped me to raise undead for them. Menaced me with cold iron... ahh, the iron on my skin, it burned, it burned!"
+            message = _ "They bound me, the accursed humans, they bound me in iron! Ahh, the cold iron on my skin... they burned me with it day and night for days, weeks, tormenting me endlessly as they gleaned the secrets of the undead from my mind!"
         [/message]
 
         [message]
             speaker="Deoran"
-            message= _ "What is this? Elves bear steel swords."
+            message= _ "What is this? Elves bear steel swords! I had no idea iron would hurt your kind so."
         [/message]
 
         [message]
             speaker="Ethiliel"
-            message= _ "They are but warriors. All elves feel the shadow of iron, and to those who walk our higher paths it is a bane, interfering with our magic. But this touches on mysteries that are not for men to know, human. I bind you never to speak of it."
+            message= _ "All elves feel the shadow of iron, and to those who walk our higher paths, it is a bane. This touches on mysteries that are not for men to know, human. I bind you never to speak of it. Cruel as those abominable brigands were, they could not have known the hurt they inflicted upon my master."
         [/message]
 
         [message]
             speaker="Mal M'Brin"
-            message = _ "Humans! Betrayers! Tree-killers! They are a blight on the world! I shall bring my new servants north to the lands we so foolishly granted to men in ages past, and destroy them all!"
+            message = _ "They knew, they knew! They reveled in my hurt, relished each and everyone of my cries of pain! But their minds were weak... I knew this, and I knew it would be the means to my vengeance. I taught them to summon powers they could not control. In their greed, they never stopped to wonder if they could master the sorcery, or if it would master them and their minds in turn. Men are all blind with avarice!"
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message = _ "Content with the meager tricks I taught them, they never even noticed as I siphoned away the energy they summoned for myself. I grew more powerful day by day, yet not one of those filthy tree-killers thought that I posed a threat to them. Even when I ascended to undeath, they never questioned my teachings until they had all become my mindless slaves!"
         [/message]
 
         [message]
             speaker="Ethiliel"
-            message= _ "Your servants! Your servants are abominations worse than any human. They stink of the grave. This cannot be the sage Mebrin that I knew and revered speaking. He would never have allied himself with the dead against the living!"
+            message= _ "Mebrin..."
         [/message]
 
         [message]
             speaker="Mal M'Brin"
-            message= _ "I am called Mal M’Brin now, Ethiliel, best student of mine. It is time for a new lesson. I was such as you, full of doubt and weakness, but now I have passed over and become more than you know. There is infinity in death; I have touched the void at the heart of all things. You, too, can partake of its boundless power."
-        [/message]
-
-        [message]
-            speaker="Mal M'Brin"
-            message= _ "Join me! Stand by my side! We shall rise and sweep the humans from the green world. Their corpses will serve us; their bones will dance for our pleasure."
+            message = _ "You were my best pupil, Ethiliel. You surely recognize the greatness that I have become. Hah! Imagine, a small part of me is actually grateful to those decrepit humans! Without them, I never would have found the courage to master the dark arts and uncover the secrets to immortality."
         [/message]
 
         [message]
             speaker="Ethiliel"
-            message= _ "And when we were done, what would we have become? Unlife. Hungering shadows, devouring all we once cherished."
+            message= _ "Mebrin... that's enough. I am sorry. I should have protected you. I should never have let those humans take you and turn you into... into a monster!"
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message = _ "What are you saying..?"
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "Surely you see it! Take a good look at yourself! Your servants are abominations worse than any human. They stink of death, and tainted magic, and... and corruption! Even you! Mebrin... you were the kindest and gentlest of the sages. How could you become something like this? Mebrin, answer me!"
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "I am called Mal M’Brin now, Ethiliel. It is the name I took when I unchained myself from the shallow-mindedness of the elves and passed over into enlightenment. There is infinity here in death; I have touched the void at the heart of all things, and I have begun to probe the mystic arts far beyond what any living human or elf knows. You, too, can partake of its boundless power."
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "You have become evil!"
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "Join me! Stand by my side! We shall rise and eradicate the humans from the green world. Their corpses will serve us! Their bones will dance for our pleasure! We will make them into the mindless slaves that they deserve to be!"
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "And when that is done, what will we have become? Naught but hungering shadows, devouring all we once cherished."
             image=portraits/ethiliel-mad.png
         [/message]
 
         [message]
             speaker="Ethiliel"
-            message= _ "No. It shall not be. The sage Mebrin is dead. It is time to put him to rest."
+            message= _ "No... No. The sage Mebrin is dead. You are not the master I once revered. I will cleanse your soul and put you to rest, my beloved teacher."
         [/message]
 
         [message]
             speaker=Deoran
             image=portraits/deoran-mad.png
-            message= _ "Even a mere human can see that you have become a mockery of all that you once believed in. I will destroy you and your works if it’s the last thing I do!"
+            message= _ "Even a mere human can see that you have become a mockery of all that you once believed in. I will destroy you and bury your perverse ideals, even if it costs me my own life!"
         [/message]
+
         [message]
             speaker="Mal M'Brin"
-            message= _ "You, destroy me? Fool human. You will die, and the elves you have seduced with you. And you shall serve me beyond death, forever."
+            message= _ "You? Destroy me? Your flesh will provide a fine feast for my ghouls, and once they are through with you, you will serve me forever in undeath!"
         [/message]
     [/event]
 
@@ -774,7 +822,42 @@
 
         [message]
             speaker="Mal M'Brin"
-            message= _ "Nooo! This cannot be. The elves I once led have destroyed me. After all I have sacrificed, I still die..."
+            message= _ "Ethiliel! Wait... think about it! Think of everything you are throwing away! We could build an empire together, where the humans are our slaves and you and I are the immortal rulers of the world!"
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "It would only be an empire of misery, Mebrin. I wish it had not come to this, but you have been corrupted beyond saving. Still, I will fondly cherish the memories I had with the old you."
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "You wouldn't dare strike me! I am the darkness incarnate! I am your master! You will obey me!"
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "Goodbye, Mebrin."
+        [/message]
+
+        [kill]
+            id="Mal M'Brin"
+            animate=yes
+        [/kill]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "It is done."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "Indeed, the lich is destroyed. Let us not linger here any longer than we need to. This place is filled with only grief and sorrow."
+        [/message]
+
+        [message]
+            speaker="Ethiliel"
+            message= _ "Yes, just let me gather my thoughts, and I will lead you back to your homes."
         [/message]
 
         {CLEAR_VARIABLE troll_allies,troll_help_cost}
