S7: added story text

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -19,6 +19,7 @@
     victory_when_enemies_defeated=no
     {TURNS 50 45 40}
 
+    {SG_INTO_THE_DEPTHS}
     {TSG_BIGMAP {JOURNEY_07A_NEW} }
 
     # The South Guard.
