S7: minor update to troll speech

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -317,7 +317,7 @@
                     [/variable]
                 [/show_if]
                 {OPTIONAL_OBJECTIVE_CAPTION}
-                description= _ "Meet with and pay the troll leader $troll_help_cost gold to receive their help"
+                description= _ "Meet with and offer the troll leader $troll_help_cost| gold to receive their help"
                 condition=win
             [/objective]
             [objective]
@@ -390,7 +390,7 @@
 
         [message]
             speaker=Grek
-            message= _ "Undead! Ha, them puny skeletons we smash all the time! You be friendly enough so we no attack you, but why we should help you?"
+            message= _ "Undead! Ha, them puny skeletons we smash all the time! You be friendly so we no attack you, but why we should help you?"
         [/message]
 
 #ifdef EASY
@@ -468,7 +468,7 @@
             [/message]
             [message]
                 speaker=Grek
-                message= _ "We lead you to bad lich. We kill dwarves before and take their thunder fire. Grek put by wall behind lich castle. We can use to attack lich directly. No worry about fight through lich minions."
+                message= _ "We lead you to bad lich. We killed dwarves and take their thunder fire. Grek put by wall behind castle. You use to attack lich."
             [/message]
 
             [lift_fog]
@@ -483,7 +483,7 @@
             [message]
                 speaker=Grek
                 scroll=no
-                message= _ "Go here and light thunder fire and it blast back door into lich lair!"
+                message= _ "Go look down passage, you see thunderball there? Only need one spark and BOOM! Back door into lich lair."
             [/message]
 
             {VARIABLE bomb_ready yes}
@@ -628,7 +628,7 @@
             [/option]
 
             [option]
-                label= _ "No, sorry."
+                label= _ "No, just looking around."
 
                 [command]
                     [allow_undo][/allow_undo]
