S6b slight revision for outlaw speech

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -1164,7 +1164,7 @@ _f, _f, Re, _f
         [/message]
         [message]
             speaker=Urza Afalas
-            message= _ "Thank you. I will only hope for mercy when we return to Westin."
+            message= _ "Thank you. I will help you as much as I can when we return to Westin."
         [/message]
 
         {CLEAR_VARIABLE secret_path}
