--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -181,30 +181,62 @@
 
         [message]
             speaker=Deoran
-            message= _ "We have escaped the great forest, but look! The undead are still chasing us."
+            message= _ "We are finally back in Wesnoth, but look! The undead have almost caught up to us!"
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "My lord, you must hasten back to Westin to prepare a defense against them. I will command the defense of the border forts."
-        [/message]
-        [message]
-            speaker=Urza Afalas
-            message= _ "I too will make my stand here — I owe you my life and must atone for my crimes. Together we will hold off the foul undead as long as we can."
+            message= _ "These forts and ill-equipped for holding back so many undead. I am certain we will be slaughtered if we try to fight them here!"
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Minister Hylas, ride with me to Westin — you must summon the Council of Westin while I prepare the city’s defenses. We shall return as soon as we can in force and relieve you."
+            message= _ "But we cannot flee like this forever... the horses are tired, and the men are tired, and I am tired as well. The undead can march day and night without rest, but we cannot. They will certainly overtake us before we reach Westin."
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "Make no promises you know you cannot keep. Organize the defense of Westin, and if you survive, remember those who fell here."
+            message= _ "It's decided, then. Deoran, you must hasten back to Westin to prepare a defense against them. I will command the defense of the border forts. Leave me a few men, and we will hold back the undead as long as we can."
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "But such a thing will mean certain death!"
+        [/message]
+        [message]
+            speaker=Sir Gerrick
+            message= _ "Deoran, you are still young and have many things to learn. In dire times, sacrifices must always be made one way or another. If we flee with you, the undead will surely run us down and make short work of the city-folk. Then everything we have fought for will be lost!"
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "Even so..."
+        [/message]
+        [message]
+            speaker=Urza Afalas
+            message= _ "I will stand here with you, Sir Gerrick. You will need my help to slow down the undead, and I have a debt to repay to you for sparing my life."
+        [/message]
+        [message]
+            speaker=Sir Gerrick
+            message= _ "Those are brave words that I would not have expected from you, Afalas."
+        [/message]
+        [message]
+            speaker=Urza Afalas
+            message= _ "All things end one way or another. Alas, I would have liked to see my home in Westin one more time, but I am too tired. Tired of running, and tired of fleeing from these undead, who corrupted and consumed my brothers. You may think us criminals and outlaws, but we are still human and we still know loyalty and gratitude, sir knights."
+        [/message]
+        [message]
+            speaker=Sir Gerrick
+            message= _ "You will not change our minds, Deoran. Go!"
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "I... I understand. Minister Hylas, come ride with me to Westin. You must summon the city council while I prepare the defenses. Sir Gerrick, Afalas, we shall return as soon as we can and relieve you."
+        [/message]
+        [message]
+            speaker=Sir Gerrick
+            message= _ "You know what the outcome of our battle here will be. I trust you to protect our home from the undead and only ask you to remember those who fell defending our land. Farewell, Sir Deoran!"
         [/message]
 
         {MOVE_UNIT id=Deoran 18 5}
 
         [message]
             speaker=Deoran
-            message= _ "Your name will be sounded in the roll of heroes, and you will be avenged. Thank you, my friend."
+            message= _ "We will never forget your sacrifice here. Thank you, my friend."
         [/message]
 
         {MOVE_UNIT id=Deoran 17 1}
@@ -227,13 +259,13 @@
 
         [message]
             speaker=Illan
-            message= _ "We are yours to command, Sir Gerrick. Our men are not the great warriors that you and Deoran are, but we will hold our lines staunchly, until the bitter end."
+            message= _ "We are yours to command, Sir Gerrick. We will hold back the undead until the bitter end!"
         [/message]
 
         [objectives]
             side=1
             [objective]
-                description= _ "Hold the line: Keep Sir Gerrick alive as long as possible"
+                description= _ "Hold the line: keep Sir Gerrick alive as long as possible"
                 condition=win
             [/objective]
 
@@ -248,7 +280,7 @@
 
         [message]
             speaker=narrator
-            message= _ "There is no way to win this scenario, and no way to lose. Hold off the undead hordes as long as you can. Keep Sir Gerrick alive as long as you can. Starting with turn 6, every turn that passes strengthens the defenses of Westin."
+            message= _ "Hold off the undead hordes and keep Sir Gerrick alive as long as you can. Starting on turn 6, every turn that passes strengthens the defenses of Westin."
             image=wesnoth-icon.png
         [/message]
     [/event]
@@ -282,7 +314,7 @@
 
         [message]
             speaker=Urza Afalas
-            message= _ "Now I will never see my home again... Hold back the undead, Gerrick!"
+            message= _ "So this is how it ends... I am coming to you, my brothers..."
         [/message]
     [/event]
 
@@ -294,7 +326,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "I only hope we have bought Deoran enough time to secure Westin for the onslaught!"
+            message= _ "Argh! I only hope... we have bought enough time... for Deoran..."
         [/message]
         [kill]
             x,y=$x1,$y1
@@ -302,7 +334,7 @@
         [/kill]
         [message]
             speaker="Mal M'Brin"
-            message= _ "We will crush Westin as we have crushed you! No one shall stand between us and our home."
+            message= _ "Pesky little humans! You have only delayed the inevitable. We will sweep through your cities and raze them to the ground! March onward, my skeletons! We go to destroy Westin!"
         [/message]
 
         [endlevel]
