--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -312,12 +312,13 @@
 
         [message]
             speaker=Deoran
-            message= _ "Look! The undead army has broken through Sir Gerrick’s lines! Alas, he is lost!"
+            image=portraits/deoran-sad.png
+            message= _ "Look there! The undead army has broken through Sir Gerrick’s line! Alas, he is lost!"
         [/message]
 
         [message]
             speaker=Moreth
-            message= _ "Since I was a boy, Gerrick was my leader, and there was no one braver. Today we shall defend our homes, and avenge him!"
+            message= _ "Gerrick was my mentor and caretaker ever since I was little. I wish he had not sacrificed himself for us, but his bravery and courage is truly admirable. Today, we will defeat the undead and avenge him!"
         [/message]
 
         [if]
@@ -332,7 +333,7 @@
             [then]
                 [message]
                     speaker=Deoran
-                    message= _ "But in the narrow window his valiant stand gave us, we have roused some of the provincial guard and reinforced our defenses!"
+                    message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered some of the provincial guard and reinforced our defenses!"
                 [/message]
             [/then]
             [elseif]
@@ -347,7 +348,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "But in the narrow window his valiant stand gave us, we have roused the whole provincial guard and reinforced our defenses!"
+                        message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered the whole provincial guard and reinforced our defenses!"
                     [/message]
                 [/then]
             [/elseif]
@@ -363,7 +364,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "But in the narrow window his valiant stand gave us, we have roused the whole provincial guard and fully embattled the city!"
+                        message= _ "I, too, wish that he were still here to fight with us today. But in the narrow window his valiant stand gave us, we have gathered the whole provincial guard and fully embattled the city!"
                     [/message]
                 [/then]
             [/elseif]
@@ -373,7 +374,12 @@
         # while Deoran speaks if pebbles_defense_length is >= 6 (i.e. provincial_guard equals some)
         [message]
             speaker=Nilaf
-            message= _ "Indeed, Lord, we are ready to defend our homes!"
+            message= _ "Indeed, Sir Deoran, we have come to defend Westin from the undead menace!"
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "Minister Hylas, what word is there from the allies of the council?"
         [/message]
 
         [if]
@@ -384,13 +390,13 @@
             [then]
                 [message]
                     speaker=Minister Hylas
-                    message= _ "I have summoned the great Council of Westin!"
+                    message= _ "The council of Westin has summoned some aid from our allies to the north!"
                 [/message]
                 # wmllint: local spelling Mefel
                 {NAMED_LOYAL_UNIT 1 (Silver Mage) 11 1 (Minister Mefel) (_"Minister Mefel")}
                 [message]
                     speaker=Minister Mefel
-                    message= _ "Hylas, I have made all possible haste, but my Council brethren are not as swift as I. It will take more time for them to arrive."
+                    message= _ "We come to battle the unholy ones at your side. Hylas, I have made all possible haste, but the others are not as swift as I. It will take more time for them to arrive."
                 [/message]
                 {VARIABLE council_arrive_turn 25}
                 {VARIABLE_OP council_arrive_turn sub $pebbles_defense_length}
@@ -399,7 +405,7 @@
             [else]
                 [message]
                     speaker=Minister Hylas
-                    message= _ "And I have summoned the great Council of Westin! They will battle with all their might!"
+                    message= _ "The council of Westin has summoned many of our brethren from our allies to the north!"
                 [/message]
 
                 {NAMED_LOYAL_UNIT 1 (Silver Mage) 11 1 (Minister Mefel) (_"Minister Mefel")}
@@ -409,18 +415,14 @@
 
                 [message]
                     speaker=Minister Mefel
-                    message= _ "We have heard your summons, and we shall send these dark foes back to the abyss that spawned them!"
-                [/message]
-                [message]
-                    speaker=Deoran
-                    message= _ "Council of Westin, we are cheered by your presence. Your aid will be most welcome."
+                    message= _ "We heard your call for help and came as quickly as we could. These undead shall be sent back to the dark abyss that spawned them!"
                 [/message]
             [/else]
         [/if]
 
         [message]
             speaker=Deoran
-            message= _ "We have rallied all the forces that we will be able to! Let us not make Sir Gerrick’s sacrifice a vain one. For Wesnoth!"
+            message= _ "So, this is it. Sir Gerrick has bought us enough time to rally our forces and fortify the city. A mighty battle is upon us, but as surely as the dawn breaks after every night, the courage and valor of men will prevail over the wicked creatures of darkness. We must stand fast against the undead and defend our homes! We fight for Sir Gerrick! We fight for Wesnoth!"
         [/message]
 
         [objectives]
@@ -445,7 +447,7 @@
                         less_than=$council_arrive_turn
                     [/variable]
                 [/show_if]
-                description= _ "The Council of Westin will arrive on turn $council_arrive_turn|."
+                description= _ "More allies will arrive on turn $council_arrive_turn|."
             [/note]
         [/objectives]
         {CLEAR_VARIABLE pebbles_defense_length,defenses,provincial_guard,village_radius}
@@ -466,11 +468,11 @@
 
         [message]
             speaker=Minister Romand
-            message= _ "We have heard your summons, and we shall send these dark foes back to the abyss that spawned them!"
+            message= _ "We heard your call for help and came as quickly as we could. We are at your service, Sir Deoran!"
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Council of Westin, we are cheered by your presence. Your aid will be most welcome."
+            message= _ "Your arrival couldn't be more timely. With you here, we shall send these undead back to the dark abyss that spawned them!"
         [/message]
         {CLEAR_VARIABLE council_arrive_turn}
     [/event]
@@ -503,10 +505,47 @@
     [/event]
 
     [event]
+        name=last breath
+        [filter]
+            id="Mal M'Brin"
+        [/filter]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "Aaargh! You dare strike me?! Puny humans, I am the darkness incarnate! I am power beyond your comprehension!"
+        [/message]
+
+        [message]
+            speaker="Minister Hylas"
+            message= _ "You are merely a servant of the power that corrupted you, lich! You have not mastered the darkness; it, instead, has enslaved you."
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "Fools! Imbeciles! You humans are a worthless blight upon this wretched world! I must purge you all— I must destroy all who live... I must..."
+        [/message]
+
+        [message]
+            speaker="Deoran"
+            message= _ "These worthless humans just bested you and your armies. Your time has come, once wise sage of the elves."
+        [/message]
+
+        [message]
+            speaker="Mal M'Brin"
+            message= _ "Beaten... by mere mortals... how has it come to this..? Noooo..."
+        [/message]
+    [/event]
+
+    [event]
         name=die
         [filter]
             id="Mal M'Brin"
         [/filter]
+
+        [message]
+            speaker="Deoran"
+            message= _ "At long last, it is done."
+        [/message]
 
         [endlevel]
             result=victory
