TSG: updated storytext for several scenarios.

--- a/data/campaigns/The_South_Guard/utils/sg_story.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_story.cfg
@@ -58,6 +58,26 @@
     [/story]
 #enddef
 
+#define SG_INTO_THE_DEPTHS
+    [story]
+        [part]
+            background=story/fall.jpg
+            story= _ "At the undead fortress, Deoran watched on as Ethiliel dispelled the magical barriers guarding the catacombs. One by one, they came undone in flashes of blue and black, cerulean and obsidian energies diffused out into the cold, dry air."
+            music=revelation.ogg
+        [/part]
+
+        [part]
+            background=story/fall.jpg
+            story= _ "He wondered briefly why she had stopped mentioning Mebrin and his whereabouts, but something told him that now was not the time to mention the sage's name. Perhaps, he thought, she suspected that the bandits' story was indeed true and that Mebrin had been corrupted by his dabblings in undead magic. Perhaps she simply hadn't come to terms with it."
+        [/part]
+
+        [part]
+            background=story/fall.jpg
+            story= _ "Eventually, all the wards were gone, and with only a hushed word of beckoning, Ethiliel led the men down into the crypt."
+        [/part]
+    [/story]
+#enddef
+
 #define SG_RETURN_TO_KERLATH
     [story]
         [part]
@@ -77,13 +97,13 @@
     [story]
         [part]
             background=story/winter.jpg
-            story= _ "Snow fell as Deoran, Sir Gerrick and Urza Afalas emerged from the great southern forest. An oppressive silence hung over the land, and an ominous gloom followed close behind the men of the South Guard."
+            story= _ "Snow fell as Deoran, Sir Gerrick, and Urza Afalas emerged from the great southern forest. Yet even as they returned to the land of men, the ominous gloom of the forest followed them. Up above, the bright sun was shrouded with grey fog, overcast with billowing clouds streaking through the sky in streams of darkened ash. Behind, the crepuscular shadow spread outward from the forest, an unnatural extension of the powers that lay within. It gained quickly upon them, the sinister darkness creeping toward the men of the South Guard."
             music=revelation.ogg
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Finally they arrived at the southern border of Wesnoth and the forts that guarded it. The undead were close on their heels..."
+            story= _ "They rode quickly northward. Day and night, they fled without reprieve until they finally crossed back into Kerlath Province. Deoran and his men entered the forts guarding the border to Wesnoth, the undead close on their heels."
         [/part]
     [/story]
 #enddef
@@ -119,37 +139,33 @@
     [story]
         [part]
             background=story/winter.jpg
-            story= _ "With bitter spears and grim expression, the men of Wesnoth launched the last assault on the undead. As they cut through lifeless flesh and shattered chill bones a ray of sunlight pierced the clouds. The winds died and the men were filled with new life. A great cry they let out as they stormed the encampment of Mal M’Brin himself, and threw down the mighty wizard."
+            story= _ "As the lich's final death scream echoed across the battlefield, his skeletal form began to crumble. Decayed bones disintegrated into ash, borne away on the frigid wind, another immortal soul cast back into the endless flow of time. With their master's power gone, the undead warriors fell back to lifelessness, crumbling into inanimate heaps of bones. The rustling wind floated across the battlefield in gentle streams, carrying with it the souls of the fallen and ascending toward the sky where the sun began to break through the ashen clouds. As the sunlight broke through, the wind passed, and all was still."
             music=revelation.ogg
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Exhausted, Deoran dropped his lance to the ground. The men around him slowly lifted their helmets from their brows. The moans of the wounded overshadowed the rustling of the north wind in the distance. The undead were gone."
+            story= _ "Deoran dropped his lance to the ground. The men around him slowly lifted their helmets from their brows. The battle was over. The undead were gone."
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "For days the healers of Westin worked feverishly to save as many of the valiant soldiers as they were able. Many mounds, though, were raised as homes for the fallen in the fields north of the city, and to the roll of fallen heroes many names were added."
+            story= _ "For several days, the healers of Westin worked feverishly to save as many of the wounded as they were able. The villagers set out to rebuild their homes and bury the dead to the north of the city, where many mounds joined the garden of graves already there."
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "The loftiest mound belonged to Sir Gerrick. After the battle, Deoran led an expedition to the southern border posts, and there he found Sir Gerrick’s sword and shield. Those he placed atop Gerrick’s mound, and they were a symbol of loyalty and valor to all the people of Westin."
-        [/part]
-        [part]
-            background=story/winter.jpg
-            story= _ "Gerrick’s name was added at the top of the roll of fallen heroes, and read aloud at the beginning of every great council. The memory of his desperate last stand at the border posts passed into song, and was not forgotten for many generations."
+            story= _ "After the battle, Deoran led an expedition to the southern border posts, where the forts had been smashed into crumbled ruins, and blood and broken weapons were scattered all about. He silently cursed the lich for the lack of bodies at the site of the battle, but deep down, he had known that that would be the fate of the men who had valiantly given their lives so that Westin might survive the undead onslaught. Still, he found small consolation in locating Sir Gerrick’s sword and shield and bearing them back with him to Westin. Those he placed atop Gerrick’s mound, where they became a symbol of sacrifice, and loyalty, and valor."
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Deoran spent his days visiting the wounded and directing the men as they rebuilt the shattered walls and ramparts of the city. Finally, as the snow melted and the roads bore their burdens again, a messenger came from King Haldric."
+            story= _ "Deoran spent his days visiting the wounded and directing the men as they rebuilt the shattered walls and ramparts of the city. Slowly, a sence of normalcy began to return to Kerlath Province as Westin was restored and the South Guard began to patrol the villages once again. Finally, as the snow melted and green buds marked the onset of spring, a messenger came from King Haldric."
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Sir Deoran, Knight of Wesnoth, was summoned to Weldyn for a council with King Haldric himself. Dark clouds were brewing throughout the realm, and every commander would be needed to weather the storm..."
+            story= _ "Sir Deoran, knight of Wesnoth, was summoned to Weldyn to convene with King Haldric and several of his closest advisers. Dark clouds were brewing throughout the realm, and every commander would be needed to weather the storm..."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
